threetier_kube/frontend/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: reddychaithanya06/frontend-helm:latest
          imagePullPolicy: Always
          ports:
             - containerPort: 80
