threetier_kube/frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: exam.com
    http:
      paths:
#      - path: /backend(/|$)(.*)
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: backend-service
#            port:
#              number: 5000
      - path: /frontend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80





#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: example-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  ingressClassName: nginx   # <--- ADD THIS LINE
#  rules:
#    - host: chai.fstack.store
#      http:
#        paths:
#          - path: /api
#            pathType: Prefix
#            backend:
#              service:
#                name: backend-service
#                port:
#                  number: 5000
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: frontend-service
#                port:
#                  number: 80
